[package]
name = "open-coroutine-core"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-core"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
corosensei = "0.1.3"
uuid = { version = "1.3.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
libc = "0.2.137"
once_cell = "1.13.0"
scopeguard = "1.1.0"
num_cpus = "1.14.0"
rayon = "1.6.1"
object-collection = "0.0.5"
timer-utils = "0.0.4"
work-steal-queue = "0.1.1"

[features]
default = []

# Provide preemptive scheduling implementation.
# Not enable for default,
preemptive-schedule = []

# Enable all features
full = ["preemptive-schedule"]
